--- a/packages/webos-remote-ui/src/app.css
+++ b/packages/webos-remote-ui/src/app.css
@@ -341,6 +341,20 @@ h2 {
   font-weight: 600;
 }
 
+.power-status-refresh {
+  background: none;
+  border: none;
+  padding: 0;
+  width: 100%;
+  text-align: inherit;
+  cursor: pointer;
+}
+
+.power-status-refresh:focus-visible {
+  outline: 2px solid var(--accent-color);
+  outline-offset: 2px;
+}
+
 .power-status__dot {
   width: 12px;
   height: 12px;
